Improved: Fixing defects reported by code analysis tools. (OFBIZ-9485)
Avoid the use of inefficient Boolean constructors and avoid reliance on
default encoding.

Thanks Kyra Pritzel-Hentley for reporting an providing the patch.

git-svn-id: https://svn.apache.org/repos/asf/ofbiz/ofbiz-framework/trunk@1801473 13f79535-47bb-0310-9956-ffa450edef68